# osu-native-py

./: .bumpversion.toml  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: bump-version.yml  ci.yml  publish.yml
scripts/: fix_cabinet_header.py
src/: main.py
src/osu_native_py/: __init__.py
src/osu_native_py/native/: __init__.py
src/osu_native_py/wrapper/: __init__.py
src/osu_native_py/wrapper/attributes/: __init__.py
src/osu_native_py/wrapper/attributes/difficulty/: __init__.py  base.py  catch.py  mania.py  osu.py  taiko.py
src/osu_native_py/wrapper/attributes/performance/: __init__.py  base.py  catch.py  mania.py  osu.py  taiko.py
src/osu_native_py/wrapper/calculators/: __init__.py  difficulty_calculator.py  performance_calculator.py
src/osu_native_py/wrapper/objects/: __init__.py  beatmap.py  error_code.py  mod.py  mods_collection.py  native_handler.py  native_helper.py  ruleset.py  score_info.py
src/osu_native_py/wrapper/utils/: __init__.py  native_handler.py  native_helper.py
tests/: test_catch_ruleset.py  test_mania_ruleset.py  test_standard_ruleset.py  test_taiko_ruleset.py  test_wrapper.py
tests/resources/: 4289411.osu  5107047.osu  5438072.osu
